@@ -10,64 +10,66 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <easybuggy-port>8080</easybuggy-port>
-        <!-- default properties (JDK 1.7 or earlier) -->
-        <jvm.args.perm.size>-XX:MaxPermSize=128m</jvm.args.perm.size>
-        <jvm.args.gc.log.path>-Xloggc:logs/gc.log</jvm.args.gc.log.path>
-        <jvm.args.print.heap.at.gc>-XX:+PrintHeapAtGC</jvm.args.print.heap.at.gc>
-        <jvm.args.print.gc.details>-XX:+PrintGCDetails</jvm.args.print.gc.details>
-        <jvm.args.print.gc.date.stamps>-XX:+PrintGCDateStamps</jvm.args.print.gc.date.stamps>
-        <jvm.args.gc.log.file.rotation>-XX:+UseGCLogFileRotation</jvm.args.gc.log.file.rotation>
-        <jvm.args.number.of.gc.log.files>-XX:NumberOfGCLogFiles=5</jvm.args.number.of.gc.log.files>
-        <jvm.args.gc.log.file.size>-XX:GCLogFileSize=10M</jvm.args.gc.log.file.size>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
-    <profiles>
-        <profile>
-            <id>JDK8-Switch</id>
-            <activation>
-                <jdk>1.8</jdk>
-            </activation>
-            <properties>
-                <jvm.args.perm.size>-XX:MaxMetaspaceSize=128m</jvm.args.perm.size>
-                <jvm.args.gc.log.path>-Xloggc:logs/gc_%p_%t.log</jvm.args.gc.log.path>
-            </properties>
-        </profile>
-        <profile>
-            <id>JDK11-Switch</id>
-            <activation>
-                <jdk>11</jdk>
-            </activation>
-            <properties>
-                <jvm.args.perm.size>-XX:MaxMetaspaceSize=128m</jvm.args.perm.size>
-                <jvm.args.gc.log.path>-Xlog:gc*:logs/gc_%p_%t.log:time,level,tags:filecount=5,filesize=10M</jvm.args.gc.log.path>
-                <!-- TODO Remove these properties -->
-                <jvm.args.print.heap.at.gc>-Dummy=Dummy</jvm.args.print.heap.at.gc>
-                <jvm.args.print.gc.details>-Dummy=Dummy</jvm.args.print.gc.details>
-                <jvm.args.print.gc.date.stamps>-Dummy=Dummy</jvm.args.print.gc.date.stamps>
-                <jvm.args.gc.log.file.rotation>-Dummy=Dummy</jvm.args.gc.log.file.rotation>
-                <jvm.args.number.of.gc.log.files>-Dummy=Dummy</jvm.args.number.of.gc.log.files>
-                <jvm.args.gc.log.file.size>-Dummy=Dummy</jvm.args.gc.log.file.size>
-            </properties>
-        </profile>
-    </profiles>
-
     <dependencies>
-        <!-- Add your dependencies here -->
-        <!-- Servlet API -->
-		
+        <!-- Existing dependencies -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
-        <!-- Apache Commons Lang -->
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
+
+        <!-- New Dependencies -->
+        <!-- Apache Directory LDAP API -->
+        <dependency>
+            <groupId>org.apache.directory.api</groupId>
+            <artifactId>api-all</artifactId>
+            <version>2.0.0.AM2</version>
+        </dependency>
+
+        <!-- SLF4J (Simple Logging Facade for Java) -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.36</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.36</version>
+        </dependency>
+
+        <!-- Javassist -->
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.28.0-GA</version>
+        </dependency>
+
+        <!-- JavaMail -->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
+        <!-- Apache Commons IO -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
+        <!-- Other dependencies as needed -->
     </dependencies>
 
     <build>
@@ -83,156 +85,12 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.0.0-M3</version>
-                <executions>
-                    <execution>
-                        <id>enforce-java</id>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <requireMavenVersion>
-                                    <version>[3.0.0,)</version>
-                                </requireMavenVersion>
-                                <requireJavaVersion>
-                                    <version>[1.6,)</version>
-                                    <message>[ERROR] OLD JDK [${java.version}] in use.
-                                        EasyBuggy requires JDK 1.6 or later</message>
-                                </requireJavaVersion>
-                            </rules>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.owasp</groupId>
-                <artifactId>dependency-check-maven</artifactId>
-                <version>6.1.6</version>
-                <configuration>
-                    <format>ALL</format>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.8</version>
-                <executions>
-                    <execution>
-                        <id>create-empty-directory-and-english-properties</id>
-                        <phase>process-resources</phase> <!-- Changed phase to process-resources -->
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <tasks>
-                                <mkdir dir="logs" />
-                                <copy file="${basedir}/src/main/resources/messages_en.properties"
-                                    tofile="${project.build.outputDirectory}/messages.properties" />
-                                <copy file="${basedir}/src/main/resources/indexpage_en.properties"
-                                    tofile="${project.build.outputDirectory}/indexpage.properties" />
-                                <delete
-                                    file="${project.build.outputDirectory}/org/t246osslab/easybuggy/core/utils/DeleteClassWhileMavenBuild.class" />
-                            </tasks>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.1</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                     <warName>ROOT</warName>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.1</version>
-                <executions>
-                    <execution>
-                        <id>tomcat-run</id>
-                        <goals>
-                            <goal>exec-war-only</goal>
-                        </goals>
-                        <phase>package</phase>
-                        <configuration>
-                            <path>/</path>
-                            <enableNaming>true</enableNaming>
-                            <finalName>easybuggy.jar</finalName>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.0.0</version>
-                <executions>
-                    <execution>
-                        <id>startup-uber-start</id>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                        <configuration>
-                            <mainClass>your.main.Class</mainClass>
-                            <classpathScope>test</classpathScope>
-                            <arguments>
-                                <argument>${jvm.args.perm.size}</argument>
-                                <argument>${jvm.args.gc.log.path}</argument>
-                                <argument>-Xmx256m</argument>
-                                <argument>-XX:MaxDirectMemorySize=90m</argument>
-                                <argument>-XX:+UseSerialGC</argument>
-                                <argument>${jvm.args.print.heap.at.gc}</argument>
-                                <argument>${jvm.args.print.gc.details}</argument>
-                                <argument>${jvm.args.print.gc.date.stamps}</argument>
-                                <argument>${jvm.args.gc.log.file.rotation}</argument>
-                                <argument>${jvm.args.number.of.gc.log.files}</argument>
-                                <argument>${jvm.args.gc.log.file.size}</argument>
-                                <argument>-Dderby.system.home=target/derby-db</argument>
-                                <argument>-Dderby.storage.logFileSize=512</argument>
-                                <argument>-Dderby.storage.pageSize=32768</argument>
-                                <argument>-Dderby.storage.useFastAccess=true</argument>
-                                <argument>-Dderby.storage.fullLogging=true</argument>
-                                <argument>-Dderby.storage.monitor=true</argument>
-                                <argument>-Dderby.storage.rowLocking=true</argument>
-                                <argument>-Dcom.sun.management.jmxremote</argument>
-                                <argument>-Dcom.sun.management.jmxremote.port=7900</argument>
-                                <argument>-Dcom.sun.management.jmxremote.ssl=false</argument>
-                                <argument>-Dcom.sun.management.jmxremote.authenticate=false</argument>
-                                <argument>-ea</argument>
-                                <argument>-jar</argument>
-                                <argument>target/easybuggy.jar</argument>
-                                <argument>-httpPort=${easybuggy-port}</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>io.snyk</groupId>
-                <artifactId>snyk-maven-plugin</artifactId>
-                <version>2.0.0</version>
-                <configuration>
-                    <org>asecurityguru</org>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.sonarsource.scanner.maven</groupId>
-                <artifactId>sonar-maven-plugin</artifactId>
-                <version>3.9.1.2184</version>
-                <configuration>
-                    <sonar.projectKey>asgbuggywebappl</sonar.projectKey>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.eclipse.m2e</groupId>
-                <artifactId>lifecycle-mapping</artifactId>
-                <version>1.0.0</version>
             </plugin>
         </plugins>
     </build>
